[tool.poetry]
name = "rpi-mqtt"
version = "0.1.0"
description = ""
authors = ["Ismar Slomic <ismar@slomic.no>"]
readme = "README.md"
packages = [{ include = "mqtt", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
psutil = "^5.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.0"
pylint = "^3.0.3"
isort = "^5.13.2"

[tool.poetry.scripts]
pub-sub = "mqtt.pub_sub:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_level = "debug"
addopts = [
    "--import-mode=importlib",
]

[tool.black]
# https://github.com/psf/black
line-length = 120
target_version = ['py310']

[tool.pylint]
good-names = "a,b,c,d,e,f,g,h,i,j,k,m,n,o,p,q,r,s,t,u,v,w,x,y,z,_,ch,ci,db,ex,it,lt,md,vf,ok"
max-line-length = 120
no-docstring-rgx = "^_.*|^test_.*|^.*_test"

disable = [
    "W0511", # (fixme)
    "R1711", # (useless-return)
]
