[tool.poetry]
name = "rpi-mqtt"
version = "0.1.0"
description = ""
authors = ["Ismar Slomic <ismar@slomic.no>"]
readme = "README.md"
packages = [{ include = "mqtt", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
psutil = "^7.1.0"
pyyaml = "^6.0.3"
pydantic = "^2.11.10"
paho-mqtt = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pylint = "^3.3.9"
isort = "^6.1.0"
pytest-cov = "^7.0.0"
pre-commit = "^4.3.0"
jsonschema-markdown = "^2025.7.0"
black = "^25.9.0"

[tool.poetry.scripts]
pub-sub = "mqtt.pub_sub:main"
generate_docs = "docs:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_level = "debug"
addopts = [
    "--import-mode=importlib",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
skip_empty = true
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:"
]

[tool.black]
# https://github.com/psf/black
line-length = 120
target_version = ['py310']

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
line_length = 120
indent = '    '
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0

[tool.pylint]
good-names = "a,b,c,d,e,f,g,h,i,j,k,m,n,o,p,q,r,s,t,u,v,w,x,y,z,_,ch,ci,db,ex,it,lt,md,vf,ok"
max-line-length = 120
no-docstring-rgx = "^_.*|^test_.*|^.*_test"

# max class attributes
max-attributes=20

disable = [
    "W0511", # (fixme)
    "R1711", # (useless-return)
]
